# OhmtalTracker

./: CMakeLists.txt  Makefile  README.md
OhmtalTracker/assets/: background.xcf
OhmtalTracker/assets/fm/instruments/: Running26.fms3
OhmtalTracker/assets/fms3/: Panning.fms3  Test.fms3  darkness.fms3  tuedel2.fms3
OhmtalTracker/assets/op2/: README.md  test.op2
OhmtalTracker/assets/wopl/: test.wopl
OhmtalTracker/src/: bankGui.cpp  dspGui.cpp  fancyOverlays.cpp  keyboardGui.cpp  main.cpp  ordersGui.cpp  otGlobals.h  otGui.cpp  otGui.h  otMain.h  songFunc.cpp  songGui.cpp  todo.txt
OhmtalTracker/src/fonts/: fa.h
docu/: todo.md
